cm4all-workshop (2.0) unstable; urgency=low

  * use monotonic clock instead of real-time clock
  * fix file descriptor leaks
  * suport syslog over IPv6

 --

cm4all-workshop (1.0.12) unstable; urgency=low

  * init: auto-create /var/run/cm4all
  * systemd: tweak Linux CPU scheduler settings

 -- Max Kellermann <mk@cm4all.com>  Tue, 06 Sep 2016 20:28:01 -0000

cm4all-workshop (1.0.11) unstable; urgency=low

  * fix chroot
  * enable the systemd service automatically

 -- Max Kellermann <mk@cm4all.com>  Thu, 18 Aug 2016 12:04:30 -0000

cm4all-workshop (1.0.10) unstable; urgency=low

  * systemd: implement "reload" using SIGHUP
  * systemd: enforce journal identifier "cm4all-workshop"

 -- Max Kellermann <mk@cm4all.com>  Mon, 18 Jul 2016 11:50:28 -0000

cm4all-workshop (1.0.9) unstable; urgency=low

  * systemd support, log to journald

 -- Max Kellermann <mk@cm4all.com>  Mon, 21 Dec 2015 09:04:34 -0000

cm4all-workshop (1.0.8) unstable; urgency=low

  * queue: add missing check to take advantage of INDEX "jobs_release"

 -- Max Kellermann <mk@cm4all.com>  Fri, 07 Nov 2014 09:07:45 -0000

cm4all-workshop (1.0.7) unstable; urgency=low

  * doc: allow UPDATE on unassigned jobs
  * sql: notify all clients when a job was finished
    - requires PostgreSQL 9.1 or newer
    - must reapply jobs.sql for the new "CREATE RULE" statement

 -- Max Kellermann <mk@cm4all.com>  Mon, 19 Nov 2012 15:55:00 -0000

cm4all-workshop (1.0.6) unstable; urgency=low

  * debian/init: use "exec" to invoke the logger
  * debian/control: add "Vcs-git" header
  * debian/control: add ${misc:Depends}

 -- Max Kellermann <mk@cm4all.com>  Fri, 21 Sep 2012 07:51:15 -0000

cm4all-workshop (1.0.5) unstable; urgency=low

  * jobs.sql: removed initial "DROP TABLE"
  * queue: reconnect after UPDATE failure

 -- Max Kellermann <mk@cm4all.com>  Fri, 21 Oct 2011 18:08:30 +0200

cm4all-workshop (1.0.4) unstable; urgency=low

  * move jobs.sql to its own, independend package
