@@ -48,6 +48,8 @@ struct PreparedChildProcess {
      */
     const char *chroot = nullptr;
 
+    bool regain_root = false;
+
     bool no_new_privs = false;
 
     /**
