@@ -3,6 +3,7 @@ cm4all-workshop (2.0) unstable; urgency=low
   * use monotonic clock instead of real-time clock
   * fix file descriptor leaks
   * suport syslog over IPv6
+  * import the beng-proxy child process spawner
 
  --
 
